refactor to markdown + html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Trusty - Digital Safety for Seniors</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -40,15 +40,14 @@
                     <div class="stats">
                         <h3>Why Trusty matters</h3>
                         <ul>
-                            <li>1 in 4 older adults gets targeted by an online scam every year</li>
-                            <li>In 2023, seniors lost over $3 billion to fraud</li>
-                            <li>With AI, fake websites, and scam calls, it's getting harder to tell what's real</li>
+                            <li>"Over $3 billion was lost to scams by seniors in the U.S. last year."</li>
+                            <li>"1 in 4 adults over 60 has encountered a phishing attempt."</li>
                         </ul>
-                        <p>But don't worry! You don't need to be a tech expert. Trusty will guide you, one simple step at a time. Trusty is always here for you.</p>
+                        <p>But don't worry! You don't need to be a tech expert. Trusty will guide you, one simple step at a time. Trusty is always here for you, trust.</p>
                     </div>
 
                     <div class="cta">
-                        <a href="curriculum.html" class="btn-primary">Start Learning</a>
+                        <a href="pages/curriculum.html" class="btn-primary">Start Learning</a>
                     </div>
                 </div>
             </div>
@@ -73,27 +72,27 @@
                 </div>
 
                 <div class="cta-center">
-                    <a href="curriculum.html" class="btn-primary">Start the Course!</a>
+                    <a href="pages/curriculum.html" class="btn-primary">Start the Course!</a>
                 </div>
 
                 <div class="curriculum-overview">
                     <h3>Curriculum Overview: TRUSTY Digital Safety Course</h3>
                     <ul>
-                        <li><a href="module1.html">Module 1: The Basics</a></li>
-                        <li><a href="module2.html">Module 2: Common Scams Explained</a></li>
-                        <li><a href="module3.html">Module 3: Spotting Fake News & Deepfakes</a></li>
-                        <li><a href="module4.html">Module 4: Safe Browsing & Websites</a></li>
-                        <li><a href="module5.html">Module 5: Passwords & Privacy</a></li>
-                        <li><a href="module6.html">Module 6: AI & Misinformation</a></li>
-                        <li><a href="module7.html">Module 7: Cyber Hygiene Habits</a></li>
-                        <li><a href="module8.html">Module 8: Reporting & Getting Help</a></li>
-                        <li><a href="final-quiz.html">Final Quiz & Certificate</a></li>
+                        <li><a href="pages/modules/module1.html">Module 1: The Basics</a></li>
+                        <li><a href="pages/modules/module2.html">Module 2: Common Scams Explained</a></li>
+                        <li><a href="pages/modules/module3.html">Module 3: Spotting Fake News & Deepfakes</a></li>
+                        <li><a href="pages/modules/module4.html">Module 4: Safe Browsing & Websites</a></li>
+                        <li><a href="pages/modules/module5.html">Module 5: Passwords & Privacy</a></li>
+                        <li><a href="pages/modules/module6.html">Module 6: AI & Misinformation</a></li>
+                        <li><a href="pages/modules/module7.html">Module 7: Cyber Hygiene Habits</a></li>
+                        <li><a href="pages/modules/module8.html">Module 8: Reporting & Getting Help</a></li>
+                        <li><a href="pages/final-quiz.html">Final Quiz & Certificate</a></li>
                     </ul>
                 </div>
             </div>
         </section>
     </main>
 
-    <script src="scripts.js"></script>
+    <script src="assets/js/scripts.js"></script>
 </body>
 </html>
