--- a/pages/curriculum.html
+++ b/pages/curriculum.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curriculum Overview - Trusty Digital Safety</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="../index.html">Home</a></li>
                     <li><a href="#" class="active">Curriculum</a></li>
                 </ul>
             </nav>
@@ -47,7 +47,7 @@
                             <li>Why this matters—in simple, real-life terms</li>
                             <li>Interactive: Tap the risky behavior (e.g. clicking a strange email)</li>
                         </ul>
-                        <p><a href="module1.html" class="btn-outline">Start Module 1</a></p>
+                        <p><a href="modules/module1.html" class="btn-outline">Start Module 1</a></p>
                     </div>
 
                     <div class="module-section">
@@ -59,7 +59,7 @@
                             <li>Giveaway/lottery scams</li>
                             <li>Interactive: "Is this a real message or a scam?" quiz</li>
                         </ul>
-                        <p><a href="module2.html" class="btn-outline">Start Module 2</a></p>
+                        <p><a href="modules/module2.html" class="btn-outline">Start Module 2</a></p>
                     </div>
 
                     <div class="module-section">
@@ -71,7 +71,7 @@
                             <li>Tools for verifying stories (e.g. Google Search, Snopes)</li>
                             <li>Interactive: "Is this headline real?" quiz</li>
                         </ul>
-                        <p><a href="module3.html" class="btn-outline">Start Module 3</a></p>
+                        <p><a href="modules/module3.html" class="btn-outline">Start Module 3</a></p>
                     </div>
 
                     <div class="module-section">
@@ -83,7 +83,7 @@
                             <li>Pop-ups and malware tricks</li>
                             <li>Interactive: Choose the safe website from two examples</li>
                         </ul>
-                        <p><a href="module4.html" class="btn-outline">Start Module 4</a></p>
+                        <p><a href="modules/module4.html" class="btn-outline">Start Module 4</a></p>
                     </div>
 
                     <div class="module-section">
@@ -95,7 +95,7 @@
                             <li>Optional: Introduction to password managers (like Bitwarden)</li>
                             <li>Interactive: Build a strong password with a game</li>
                         </ul>
-                        <p><a href="module5.html" class="btn-outline">Start Module 5</a></p>
+                        <p><a href="modules/module5.html" class="btn-outline">Start Module 5</a></p>
                     </div>
 
                     <div class="module-section">
@@ -107,7 +107,7 @@
                             <li>Basic tools to detect AI-generated content</li>
                             <li>Interactive: "Which of these is AI-made?"</li>
                         </ul>
-                        <p><a href="module6.html" class="btn-outline">Start Module 6</a></p>
+                        <p><a href="modules/module6.html" class="btn-outline">Start Module 6</a></p>
                     </div>
 
                     <div class="module-section">
@@ -119,7 +119,7 @@
                             <li>Be skeptical of urgency ("Do this now or else!")</li>
                             <li>Print a cheat sheet for real-world reminders</li>
                         </ul>
-                        <p><a href="module7.html" class="btn-outline">Start Module 7</a></p>
+                        <p><a href="modules/module7.html" class="btn-outline">Start Module 7</a></p>
                     </div>
 
                     <div class="module-section">
@@ -131,7 +131,7 @@
                             <li>Encourage sharing what they've learned with friends</li>
                             <li>Interactive: Step-by-step guide for reporting a scam</li>
                         </ul>
-                        <p><a href="module8.html" class="btn-outline">Start Module 8</a></p>
+                        <p><a href="modules/module8.html" class="btn-outline">Start Module 8</a></p>
                     </div>
 
                     <div class="module-section">
@@ -141,13 +141,13 @@
                     </div>
 
                     <div class="cta-center">
-                        <a href="module1.html" class="btn-primary">Begin the Course</a>
+                        <a href="modules/module1.html" class="btn-primary">Begin the Course</a>
                     </div>
                 </div>
             </div>
         </section>
     </main>
 
-    <script src="scripts.js"></script>
+    <script src="../assets/js/scripts.js"></script>
 </body>
 </html>
