--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="pastel">
   <head>
-    <link rel="icon" type="image/png" href="/assets/images/Logo.png" />
+  <link rel="icon" type="image/png" href="/Logo.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trusty</title>
